# rules_browsers

./: .bazelignore  .bazelrc  .gitignore  .prettierignore  .prettierrc  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml
.github/workflows/: presubmit.yaml
browsers/: browser_group.bzl  browser_toolchain_alias.bzl  extensions.bzl  repositories.bzl
browsers/chromium/: BUILD.bazel  chromedriver.bzl  chromium.bzl
browsers/firefox/: BUILD.bazel  firefox.bzl
browsers/private/: browser_artifact.bzl  browser_group.bzl  browser_toolchain_alias.bzl
browsers/private/update-tool/: download.mts  download_helpers.mts  generation.mts  index.mts  platforms.mts  versions.mts
browsers/private/versions/: chromedriver.bzl  chromedriver.json  chromium.bzl  chromium.json  firefox.bzl  firefox.json
patches/: @puppeteer__browsers.patch  @puppeteer__browsers@2.9.0.patch  @web__config-loader.patch  @web__test-runner-chrome@0.18.0.patch  @web__test-runner-core.patch
protractor_test/: BUILD.bazel  config.cts  index.bzl
server_test/: BUILD.bazel  test-runner.mts
setup/: step_1.bzl  step_2.bzl
src/browsers/: extensions.bzl  repositories.bzl
src/browsers/chromium/: BUILD.bazel  chromedriver.bzl  chromium.bzl
src/browsers/firefox/: BUILD.bazel  firefox.bzl
src/browsers/private/: BUILD.bazel  browser_artifact.bzl  browser_group.bzl  browser_repo.bzl  browser_toolchain_alias.bzl
src/browsers/private/update-tool/: BUILD.bazel  browsers.mts  download.mts  download_helpers.mts  extra_chrome_build_content.mts  generation.mts  index.mts  platforms.mts  playwright-download-urls.mts  playwright-download-worker.mts  playwright-types.d.ts
src/protractor_test/: BUILD.bazel  config.cts  index.bzl
src/server_test/: BUILD.bazel  index.bzl  test-runner.mts
src/wtr/: BUILD.bazel  index.bzl  wtr.config.mjs
test/: .bazelrc  BUILD.bazel  MODULE.bazel  test.spec.mjs
test/protractor_test/: BUILD.bazel  test.spec.cjs
test/server_test/: BUILD
test/wtr/basic/: BUILD.bazel
test/wtr/typescript/: BUILD.bazel
test/wtr/typescript-multiple-files/: BUILD.bazel  test.spec.mts
test/wtr/typescript-multiple-files-should-fail/: BUILD.bazel  test2.spec.mts
wtr/: index.bzl  wtr.config.mjs
