load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "config",
    srcs = ["config.cts"],
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/protractor",
        "//:node_modules/tinyglobby",
    ],
)
