module(name = "rules_browsers_test")

bazel_dep(name = "rules_browsers")
local_path_override(
    module_name = "rules_browsers",
    path = "../",
)

bazel_dep(name = "aspect_rules_js", version = "2.4.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
use_repo(npm, "npm_rules_browsers")

bazel_dep(name = "aspect_rules_ts", version = "3.6.3")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
use_repo(rules_ts_ext, "npm_typescript")
