module(name = "rules_browsers_test")

bazel_dep(name = "rules_browsers")
local_path_override(
    module_name = "rules_browsers",
    path = "../",
)

# Load all browsers.
browsers = use_extension("@rules_browsers//browsers:extensions.bzl", "browsers", dev_dependency = True)
browsers.chrome()
browsers.chromedriver()
browsers.firefox()
use_repo(
    browsers,
    "rules_browsers_chrome_linux",
    "rules_browsers_chrome_mac",
    "rules_browsers_chrome_mac_arm",
    "rules_browsers_chrome_win64",
    "rules_browsers_chromedriver_linux",
    "rules_browsers_chromedriver_mac",
    "rules_browsers_chromedriver_mac_arm",
    "rules_browsers_chromedriver_win64",
    "rules_browsers_firefox_linux",
    "rules_browsers_firefox_mac",
    "rules_browsers_firefox_mac_arm",
    "rules_browsers_firefox_win64",
)

bazel_dep(name = "aspect_rules_js", version = "2.4.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
use_repo(npm, "npm_rules_browsers")

bazel_dep(name = "aspect_rules_ts", version = "3.6.3")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
use_repo(rules_ts_ext, "npm_rules_browsers_typescript")
