load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")
load("@rules_browsers//protractor_test:index.bzl", "protractor_test")

js_binary(
    name = "server_bin",
    entry_point = "server.mjs",
)

js_library(
    name = "tests",
    srcs = ["test.spec.cjs"],
)

protractor_test(
    name = "test",
    server = ":server_bin",
    deps = [":tests"],
)
