load("//src/browsers/private:browser_group.bzl", "browser_group")
load("//src/browsers/private:browser_toolchain_alias.bzl", "browser_toolchain_alias")

package(default_visibility = ["//visibility:public"])

browser_group(
    name = "chromium",
    deps = select({
        "//src/browsers/private:linux_x64": [
            "@rules_browsers_chromedriver_linux_x64//:info",
            "@rules_browsers_chromium_linux_x64//:info",
        ],
        "//src/browsers/private:macos_x64": [
            "@rules_browsers_chromedriver_macos_x64//:info",
            "@rules_browsers_chromium_mac_x64//:info",
        ],
        "//src/browsers/private:macos_arm64": [
            "@rules_browsers_chromedriver_macos_arm64//:info",
            "@rules_browsers_chromium_mac_arm//:info",
        ],
    }),
)

browser_toolchain_alias(
    name = "toolchain_alias",
    deps = [":chromium"],
)
