load("//src/browsers/private:browser_group.bzl", "browser_group")
load("//src/browsers/private:browser_toolchain_alias.bzl", "browser_toolchain_alias")

package(default_visibility = ["//visibility:public"])

browser_group(
    name = "firefox",
    deps = select({
        "//src/browsers/private:linux_x64": [
            "@org_mozilla_firefox_linux_x64//:info",
            "@org_mozilla_geckodriver_linux_x64//:info",
        ],
        "//src/browsers/private:macos_x64": [
            # Firefox has a launcher that conditionally starts x64/arm64
            "@org_mozilla_firefox_macos//:info",
            "@org_mozilla_geckodriver_macos_x64//:info",
        ],
        "//src/browsers/private:macos_arm64": [
            # Firefox has a launcher that conditionally starts x64/arm64
            "@org_mozilla_firefox_macos//:info",
            "@org_mozilla_geckodriver_macos_arm64//:info",
        ],
        "//conditions:default": [],
    }),
)

browser_toolchain_alias(
    name = "toolchain_alias",
    deps = [":firefox"],
)
