load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//src/wtr:index.bzl", "wtr_test")

ts_project(
    name = "test_lib",
    srcs = glob(["**/*.mts"]),
    tsconfig = "tsconfig.json",
    deps = ["//:node_modules/@types/jasmine"],
)

wtr_test(
    name = "test",
    expected_exit_code = 1,
    deps = [":test_lib"],
)
