load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@rules_browsers//wtr:index.bzl", "wtr_test")

ts_project(
    name = "test_lib",
    srcs = ["test.spec.mts"],
    tsconfig = "tsconfig.json",
    deps = ["//:node_modules/@types/jasmine"],
)

wtr_test(
    name = "test",
    deps = [":test_lib"],
)
