load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@rules_browsers//wtr:index.bzl", "wtr_test")

ts_project(
    name = "test_lib",
    srcs = ["test.spec.mts"],
    tsc = "@npm_rules_browsers_typescript//:tsc",
    tsc_worker = "@npm_rules_browsers_typescript//:tsc_worker",
    tsconfig = "tsconfig.json",
    validator = "@npm_rules_browsers_typescript//:validator",
    deps = ["//:node_modules/@types/jasmine"],
)

wtr_test(
    name = "test",
    chromium = "//:chromium",
    firefox = "//:firefox",
    toolchains = [
        "//:firefox_toolchain_alias",
        "//:chromium_toolchain_alias",
    ],
    deps = [":test_lib"],
)
